Update README with current app details